[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/Caveat-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://textures/hud/ammo_gauge.png" type="Texture" id=2]
[ext_resource path="res://scenes/game/HUD/CharacterHUD.gd" type="Script" id=3]
[ext_resource path="res://textures/hud/line.png" type="Texture" id=4]
[ext_resource path="res://textures/hud/hp_green.png" type="Texture" id=5]
[ext_resource path="res://textures/hud/hp_red.png" type="Texture" id=6]
[ext_resource path="res://textures/hud/white_fon.png" type="Texture" id=7]
[ext_resource path="res://textures/hud/vnutr_krug.png" type="Texture" id=8]
[ext_resource path="res://textures/hud/yellow.png" type="Texture" id=9]
[ext_resource path="res://textures/hud/char_icons.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "set_health"
tracks/0/type = "value"
tracks/0/path = NodePath("Reverse/hp_green:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 10, 67 ), Rect2( 0, 0, 219, 67 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "set_ammo"
length = 20.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("AmmoGauge/ammo_gauge:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 0, 18 ), Rect2( 0, 0, 24, 18 ), Rect2( 0, 0, 48, 18 ), Rect2( 0, 0, 72, 18 ), Rect2( 0, 0, 96, 18 ), Rect2( 0, 0, 120, 18 ), Rect2( 0, 0, 144, 18 ), Rect2( 0, 0, 168, 18 ), Rect2( 0, 0, 192, 18 ), Rect2( 0, 0, 216, 18 ), Rect2( 0, 0, 240, 18 ), Rect2( 0, 0, 240, 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AmmoGauge/ammo_gauge2:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 240, 0, 0, 18 ), Rect2( 240, 0, 0, 18 ), Rect2( 240, 0, 24, 18 ), Rect2( 240, 0, 48, 18 ), Rect2( 240, 0, 72, 18 ), Rect2( 240, 0, 96, 18 ), Rect2( 240, 0, 120, 18 ), Rect2( 240, 0, 144, 18 ), Rect2( 240, 0, 168, 18 ), Rect2( 240, 0, 192, 18 ), Rect2( 240, 0, 216, 18 ), Rect2( 240, 0, 240, 18 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "cooldown"
tracks/0/type = "value"
tracks/0/path = NodePath("Reverse/yellow:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 87 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Reverse/yellow:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 87, 100 ]
}

[node name="CharacterHUDReversed" type="Node2D"]
script = ExtResource( 3 )

[node name="Reverse" type="Node2D" parent="."]
scale = Vector2( -1, 1 )

[node name="hp_red" type="Sprite" parent="Reverse"]
position = Vector2( 79, 9.5 )
scale = Vector2( 1, 0.970149 )
texture = ExtResource( 6 )

[node name="hp_green" type="Sprite" parent="Reverse"]
position = Vector2( -31, -24 )
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 219, 67 )

[node name="white_fon" type="Sprite" parent="Reverse"]
position = Vector2( -77, -14 )
texture = ExtResource( 7 )

[node name="CharacterPortraitParent" type="Node2D" parent="Reverse"]
position = Vector2( -76, -11 )

[node name="CharacterPortrait" type="Sprite" parent="Reverse/CharacterPortraitParent"]
position = Vector2( -4.27254, 0.63044 )
texture = ExtResource( 10 )
hframes = 4

[node name="yellow" type="Sprite" parent="Reverse"]
position = Vector2( -78, -13 )
texture = ExtResource( 9 )
vframes = 11
hframes = 10
frame = 92

[node name="line" type="Sprite" parent="Reverse"]
position = Vector2( 24, -10 )
texture = ExtResource( 4 )

[node name="vnutr_krug" type="Sprite" parent="Reverse/line"]
position = Vector2( -101, -1 )
texture = ExtResource( 8 )

[node name="HealthAnimation" type="AnimationPlayer" parent="."]
anims/set_health = SubResource( 1 )

[node name="AmmoGauge" type="Node2D" parent="."]
position = Vector2( -1, -63 )
scale = Vector2( -1, 1 )

[node name="ammo_gauge2" type="Sprite" parent="AmmoGauge"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 240, 0, 240, 18 )

[node name="ammo_gauge" type="Sprite" parent="AmmoGauge"]
position = Vector2( 0, 18 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 240, 18 )

[node name="AmmoAnimation" type="AnimationPlayer" parent="."]
anims/set_ammo = SubResource( 2 )

[node name="Name" type="Label" parent="."]
margin_left = -162.0
margin_top = -14.0
margin_right = -1.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Пришелец"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityAnim" type="AnimationPlayer" parent="."]
anims/cooldown = SubResource( 4 )
anims/idle = SubResource( 5 )
